--- a/Squad_DEV/landing.html
+++ b/Squad_DEV/landing.html
@@ -259,7 +259,7 @@
                             </div>
                             <div class="col-md-6 mb-5">
                                 <h6>Реально ли справиться с обучением, не имея знаний<br>в программировании?</h6>
-                                <p class="text-muted">Безусловно, это будет непросто, однако возможность успешно пройти обучение есть.<br>
+                                <p class="text-muted">Безусловно, это будет труднее, однако такой опыт даст большее погружение.<br>
                                     По статистике, такие люди довольно быстро догоняют остальных при должном усилии.</p>
                             </div>
                             <div class="col-md-6 mb-5">
