--- a/Squad_DEV/landing.html
+++ b/Squad_DEV/landing.html
@@ -26,7 +26,7 @@
                 <div class="row">
                     <div class="col-md-6 my-md-auto mb-5 mb-md-0 text-center text-md-left">
                         <span class="text-uppercase text-muted small-xl">Squad_DEV для macOS</span>
-                        <h1 class="display-4 mt-2 mb-5">Грядущая эволюция<br>в IT образовании.</h1>
+                        <h1 class="display-4 mt-2 mb-5">Грядущая революция<br>в IT образовании.</h1>
                         <a href="#features" class="btn btn-primary d-inline-flex flex-row align-items-center page-scroll">
                             <em data-feather="help-circle" width="20" height="20" class="mr-2"></em>
                             Почему?<!--Оставить заявку-->
