--- a/Squad_DEV/landing.html
+++ b/Squad_DEV/landing.html
@@ -4,8 +4,8 @@
         <!-- Required meta tags -->
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <title>Squad_DEV</title>
-        <meta name="description" content="Squad_DEV : The upcoming IT education revolution." /> 
+        <title>Squad_{DEV}</title>
+        <meta name="description" content="Squad_{DEV} : The upcoming IT education revolution." /> 
 
         <!--Inter UI font-->
         <link href="https://rsms.me/inter/inter-ui.css" rel="stylesheet">
@@ -25,7 +25,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6 my-md-auto mb-5 mb-md-0 text-center text-md-left">
-                        <span class="text-uppercase text-muted small-xl">Squad_DEV для macOS</span>
+                        <span class="text-uppercase text-muted small-xl">Squad_{DEV} для macOS</span>
                         <h1 class="display-4 mt-2 mb-5">Грядущая революция<br>в IT образовании.</h1>
                         <a href="#features" class="btn btn-primary d-inline-flex flex-row align-items-center page-scroll">
                             <em data-feather="help-circle" width="20" height="20" class="mr-2"></em>
@@ -51,7 +51,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-10 mx-auto">
-                        <h2 class="dot-circle">Причин для выбора Squad_DEV достаточно.</h2>
+                        <h2 class="dot-circle">Причин для выбора Squad_{DEV} достаточно.</h2>
                         <div class="row mt-6">
                             <div class="col-sm-6 mb-5">
                                 <div class="media">
@@ -220,7 +220,7 @@
                         <h2 class="dot-circle">Заинтересовало?</h2>
                         <p class="text-muted lead">Мы были бы признательны за Ваше мнение.</p>
                         <div class="row mt-5 card-contacts">
-                            <a href="mailto:kalkolay@protonmail.com?subject=Squad_DEV" class="col-md-6 mb-3 btn">
+                            <a href="mailto:kalkolay@protonmail.com?subject=Squad_{DEV}" class="col-md-6 mb-3 btn">
                                 <div class="card">
                                     <div class="card-body text-center">
                                         <div class="icon-box">
@@ -249,7 +249,7 @@
                         </div>
                         <div class="row mt-5">
                             <div class="col-md-6 mb-5">
-                                <h6>Сколько стоит обучение в Squad_DEV?</h6>
+                                <h6>Сколько стоит обучение в Squad_{DEV}?</h6>
                                 <p class="text-muted">Обучение бесплатное, есть Premium подписка с эксклюзивными обучающими материалами.</p>
                             </div>
                             <div class="col-md-6 mb-5">
