Update landing info

--- a/Squad_DEV/landing.html
+++ b/Squad_DEV/landing.html
@@ -4,8 +4,8 @@
         <!-- Required meta tags -->
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <title>Squad_{DEV}</title>
-        <meta name="description" content="Squad_{DEV} : The upcoming IT education revolution." /> 
+        <title>DevSquad</title>
+        <meta name="description" content="DevSquad : The upcoming IT education revolution." />
 
         <!--Inter UI font-->
         <link href="https://rsms.me/inter/inter-ui.css" rel="stylesheet">
@@ -25,7 +25,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6 my-md-auto mb-5 mb-md-0 text-center text-md-left">
-                        <span class="text-uppercase text-muted small-xl">Squad_{DEV} для macOS</span>
+                        <span class="text-uppercase text-muted small-xl">DevSquad</span>
                         <h1 class="display-4 mt-2 mb-5">Грядущая революция<br>в IT образовании.</h1>
                         <a href="#features" class="btn btn-primary d-inline-flex flex-row align-items-center page-scroll">
                             <em data-feather="help-circle" width="20" height="20" class="mr-2"></em>
@@ -51,7 +51,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-10 mx-auto">
-                        <h2 class="dot-circle">Причин для выбора Squad_{DEV} достаточно.</h2>
+                        <h2 class="dot-circle">Причин для выбора DevSquad достаточно.</h2>
                         <div class="row mt-6">
                             <div class="col-sm-6 mb-5">
                                 <div class="media">
