--- a/Squad_DEV/landing.html
+++ b/Squad_DEV/landing.html
@@ -249,8 +249,8 @@
                         </div>
                         <div class="row mt-5">
                             <div class="col-md-6 mb-5">
-                                <h6>Сколько стоит обучение в Squad_{DEV}?</h6>
-                                <p class="text-muted">Обучение бесплатное, есть Premium подписка с эксклюзивными обучающими материалами.</p>
+                                <h6>Сколько стоит обучение в DevSquad?</h6>
+                                <p class="text-muted">Первый проект бесплатный, стоимость остальных проектов зависит от их популярности и сложности.</p>
                             </div>
                             <div class="col-md-6 mb-5">
                                 <h6>У вас совсем нет преподавателей?</h6>
@@ -287,7 +287,7 @@
             <div class="container">
                 <div class="row mt-4">
                     <div class="col-12 text-muted text-center small">
-                        &copy; Pelmeni, 2021
+                        &copy; Pelmeni, 2021-2022
                     </div>
                 </div>
             </div>
