--- a/Squad_DEV/landing.html
+++ b/Squad_DEV/landing.html
@@ -287,7 +287,7 @@
             <div class="container">
                 <div class="row mt-4">
                     <div class="col-12 text-muted text-center small">
-                        &copy; Pelmeni, 2021-2022
+                        &copy; Kukulidi&co., 2022
                     </div>
                 </div>
             </div>
