add some new info

--- a/Squad_DEV/landing.html
+++ b/Squad_DEV/landing.html
@@ -179,30 +179,69 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-10 mx-auto">
-                        <h2 class="dot-circle">Подписка Premium.</h2>
-                        <p class="text-muted lead">Не понравилось? Вернём Вам деньги.</p>
+                        <h2 class="dot-circle">Кому подойдёт наша платформа?</h2>
+                        <p class="text-muted lead">Студентам и специалистам IT, желающим изменить мир!</p>
                         <div class="row pricing-table mt-5">
                             <div class="col-sm-5">
                                 <ul class="list-unstyled pricing-list">
                                     <li>
-                                        <h5>Месячная оплата</h5>
-                                        <p class="text-muted">Оплата подписки производится каждый месяц.</p>
+                                        <h5>Начинающим</h5>
+                                        <p class="text-muted">Имеют базовые знания, но не имеют практического опыта.</p>
                                     </li>
                                     <li>
-                                        <h5>Уникальная подборка</h5>
-                                        <p class="text-muted">Материалы подбираются уникально для каждого ученика, основываясь на его уровне знаний и личных зявках.</p>
+                                        <h5>Продвинутым</h5>
+                                        <p class="text-muted">Имеют небольшой практический опыт, но желают получить больше.</p>
                                     </li>
                                     <li>
-                                        <h5>Безлимитный доступ</h5>
-                                        <p class="text-muted">С данной подпиской появится перманентный доступ к эксклюзивными обучающим материалам.</p>
+                                        <h5>Специалистам</h5>
+                                        <p class="text-muted">Имеют большой практический опыт, но желают попробовать себя в чём-то другом.</p>
                                     </li>
                                 </ul>
                             </div>
                             <div class="col-sm-6 ml-auto bg-primary">
                                 <div class="card">
                                     <div class="card-body text-center">
-                                        <p class="h1 text-white">&#8381;649</p>
-                                        <p class="text-light">Раз в месяц</p>
+                                        <p class="h1 text-white">Всем!</p>
+                                        <p class="text-light">И каждому</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- new features section -->
+        <section class="py-6" id="features2">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-10 mx-auto">
+                        <h2 class="dot-circle">Способы монетизации:</h2>
+                        <div class="row mt-6">
+                            <div class="col-sm-6 mb-5">
+                                <div class="media">
+                                    <div class="icon-box mt-0 ml-0">
+                                        <div class="icon-box-inner small-xs text-primary">
+                                            <span data-feather="dollar-sign" width="30" height="30"></span>
+                                        </div>
+                                    </div>
+                                    <div class="media-body">
+                                        <h5 class="mt-0">Платные проекты</h5>
+                                        <span class="text-muted">Первый проект на Ваш выбор предоставляется бесплатно, а цены других проектов зависят от их популярности и сложности.</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-sm-6 mb-5">
+                                <div class="media">
+                                    <div class="icon-box mt-0 ml-0">
+                                        <div class="icon-box-inner small-xs text-primary">
+                                            <span data-feather="users" width="30" height="30"></span>
+                                        </div>
+                                    </div>
+                                    <div class="media-body">
+                                        <h5 class="mt-0">Партнёрские отношения</h5>
+                                        <span class="text-muted">.</span>
                                     </div>
                                 </div>
                             </div>
@@ -220,7 +259,7 @@
                         <h2 class="dot-circle">Заинтересовало?</h2>
                         <p class="text-muted lead">Мы были бы признательны за Ваше мнение.</p>
                         <div class="row mt-5 card-contacts">
-                            <a href="mailto:kalkolay@protonmail.com?subject=Squad_{DEV}" class="col-md-6 mb-3 btn">
+                            <a href="mailto:kalkolay@protonmail.com?subject=DevSquad" class="col-md-6 mb-3 btn">
                                 <div class="card">
                                     <div class="card-body text-center">
                                         <div class="icon-box">
