add some new info in landing.html

--- a/Squad_DEV/landing.html
+++ b/Squad_DEV/landing.html
@@ -241,7 +241,7 @@
                                     </div>
                                     <div class="media-body">
                                         <h5 class="mt-0">Партнёрские отношения</h5>
-                                        <span class="text-muted">.</span>
+                                        <span class="text-muted">Использование тестовых заданий от компаний-партнёров в качестве проектов для последующего найма участников.</span>
                                     </div>
                                 </div>
                             </div>
