--- a/Squad_DEV/landing.html
+++ b/Squad_DEV/landing.html
@@ -212,8 +212,8 @@
             </div>
         </section>
 
-        <!-- new features section -->
-        <section class="py-6" id="features2">
+        <!-- features 2 section -->
+        <section class="py-9" id="features2">
             <div class="container">
                 <div class="row">
                     <div class="col-md-10 mx-auto">
@@ -252,7 +252,7 @@
         </section>
 
         <!--help section-->
-        <section class=" mt-7" id="contact">
+        <section class=" mt-3" id="contact">
             <div class="container">
                 <div class="row">
                     <div class="col-md-10 mx-auto">
