Add competitors section in landing.html

--- a/Squad_DEV/landing.html
+++ b/Squad_DEV/landing.html
@@ -212,8 +212,8 @@
             </div>
         </section>
 
-        <!-- features 2 section -->
-        <section class="py-9" id="features2">
+        <!-- monetization section -->
+        <section class="pt-8" id="monetization">
             <div class="container">
                 <div class="row">
                     <div class="col-md-10 mx-auto">
@@ -242,6 +242,45 @@
                                     <div class="media-body">
                                         <h5 class="mt-0">Партнёрские отношения</h5>
                                         <span class="text-muted">Использование тестовых заданий от компаний-партнёров в качестве проектов для последующего найма участников.</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- competitors section -->
+        <section class="py-6" id="competitors">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-10 mx-auto">
+                        <h2 class="dot-circle">Конкуренты:</h2>
+                        <div class="row mt-6">
+                            <div class="col-sm-6 mb-5">
+                                <div class="media">
+                                    <div class="icon-box mt-0 ml-0">
+                                        <div class="icon-box-inner small-xs text-primary">
+                                            <img src="img/21_logo.png" alt="21_logo" width="60" height="60">
+                                        </div>
+                                    </div>
+                                    <div class="media-body">
+                                        <h5 class="mt-0">Школа 21 СБЕР</h5>
+                                        <span class="text-muted">Школа 21 — это образовательное заведение, созданное по инициативе руководства с целью подготовки квалифицированных сотрудников для бизнеса.</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-sm-6 mb-5">
+                                <div class="media">
+                                    <div class="icon-box mt-0 ml-0">
+                                        <div class="icon-box-inner small-xs text-primary">
+                                            <img src="img/42_logo.png" alt="21_logo" width="60" height="60">
+                                        </div>
+                                    </div>
+                                    <div class="media-body">
+                                        <h5 class="mt-0">L'ecole 42</h5>
+                                        <span class="text-muted">42 - это школа компьютерных наук, созданная и финансируемая французским миллиардером Ксавье Нилем.</span>
                                     </div>
                                 </div>
                             </div>
